@@ -268,6 +268,9 @@ Core and builtins
 Extension Modules
 -----------------
 
+- The timing module is no longer built by default.  It was deprecated
+  in PEP 4 in Python 2.0 or earlier.
+
 - Patch 1433928: Added a new type, defaultdict, to the collections module.
   This uses the new __missing__ hook behavior added to dict (see above).
 
